--- a/test/tests.html
+++ b/test/tests.html
@@ -12,7 +12,7 @@
   <nav class="navbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="../../..">Kakoune Docs</a>
-      <button class="navbar-burger" data-target="topbar-nav">
+      <button class="navbar-burger" aria-controls="topbar-nav" aria-expanded="false" aria-label="Toggle main menu">
         <span></span>
         <span></span>
         <span></span>
@@ -52,6 +52,7 @@
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
+    <button class="nav-menu-toggle" aria-label="Toggle expand/collapse all" style="display: none"></button>
     <h3 class="title"><a href="../index.html">Kakoune</a></h3>
 <ul class="nav-list">
   <li class="nav-item" data-depth="0">
@@ -187,14 +188,6 @@
 </aside>
 <article class="doc">
 <h1 class="page">Regression test</h1>
-<div id="toc" class="toc">
-<div id="toctitle">Table of Contents</div>
-<ul class="sectlevel1">
-<li><a href="#source-structure">1. Source structure</a></li>
-<li><a href="#usage">2. Usage</a></li>
-<li><a href="#details">3. Details</a></li>
-</ul>
-</div>
 <div class="sect1">
 <h2 id="source-structure"><a class="anchor" href="#source-structure"></a><a class="link" href="#source-structure">1. Source structure</a></h2>
 <div class="sectionbody">
