--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <li><a href="index.html">Getting Started</a></li>
   </ul>
 </nav>
-<div class="edit-this-page"><a href="file:///home/igor/personal/kakoune/doc_gen/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
+<div class="edit-this-page"><a href="file:///home/igor/personal/kakoune/kakoune/doc_gen/modules/ROOT/pages/index.adoc">Edit this Page</a></div>
 </div>
   <div class="content">
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
@@ -837,6 +837,23 @@ $ kak</pre>
 <div class="listingblock">
 <div class="content">
 <pre>nix-env -iA nixpkgs.kakoune</pre>
+</div>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+<div class="title">pkgsrc (NetBSD, SmartOS, macOS, Linux, etc)</div>
+<div class="listingblock">
+<div class="content">
+<pre>pkg_add kakoune</pre>
 </div>
 </div>
 </td>
